--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
   height: 200px;
   width: 200px;
   border: #000 1px solid;
-  padding: 50px;
   text-align: center;
   font-size: 5em;
+  line-height: 200px;
 }
